--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,18 @@
-server {
-	listen 80;
-	server_name ${HOST_NAME};
+events {}
+http {
+	server {
+		listen 80;
+		server_name ${HOST_NAME};
 
-	location / {
-		proxy_pass http://localhost:5000/;
-	}
+		location / {
+			proxy_pass http://django:5000/;
+			proxy_set_header Host $host;
+    			proxy_set_header X-Real-IP $remote_addr;
+		}
 
-	location ~ media\.(jpg|png)$ {
-		root /infintynews/media;
+		location /media/ {
+			autoindex on;
+        		alias /infinitynews/media/;
+		}
 	}
 }
