--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-beautifulsoup4==4.8.2
-dateparser==0.7.5
-Django==3.0.3
-djangorestframework==3.10.3
-Pillow==6.2.1
-psycopg2-binary==2.8.4
-pytz==2019.3
+beautifulsoup4==4.9.1
+dateparser==0.7.6
+Django==3.1
+djangorestframework==3.11.1
+Pillow==7.2
+psycopg2-binary==2.8.5
+pytz==2020.1
 gunicorn==20.0.4
 django-heroku==0.3.1
+requests==2.24.0
+APScheduler==3.6.3
