--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Pillow==7.2
 psycopg2-binary==2.8.5
 pytz==2020.1
 gunicorn==20.0.4
-django-heroku==0.3.1
 requests==2.24.0
+dj-database-url
 APScheduler==3.6.3
 lxml
