--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ psycopg2-binary==2.8.5
 pytz==2020.1
 gunicorn==20.0.4
 requests==2.24.0
-dj-database-url
+dj-database-url==0.5.0
+django-storages==1.9.1
 APScheduler==3.6.3
-lxml
+lxml==4.5.2
